--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,322 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Personal, Portfolio">
+    <meta name="description" content="Alex Trujillo - Personal Portfolio Template">
+    <meta name="author" content="radekthemes">
+    <title>Alex Trujilo</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Themify-icon -->
+    <link href="css/themify-icons.css" rel="stylesheet">
+    <!-- Owl.carousel -->
+    <link href="css/owl.carousel.min.css" rel="stylesheet">
+    <link href="css/owl.theme.default.min.css" rel="stylesheet">
+    <!-- Animate -->
+    <link href="css/animate.css" rel="stylesheet">
+    <!-- General styles -->
+    <link href="css/style.css" rel="stylesheet">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.14.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.14.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.14.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.14.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.14.1/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+  <body class="no-scroll" data-spy="scroll" data-target="#navbar-collapse-1" data-offset="98">
+    <!-- ======== PRELOADER ======== -->
+    <div class="preloader">
+      <div class="preloader-inner">
+        <div class="preloader-icon">
+          <span></span>
+          <span></span>
+        </div><!-- /preloader-icon -->
+      </div><!-- /preloader-inner -->
+    </div><!-- /preloader -->
+    <!-- ======== /PRELOADER ======== -->
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+    <!-- ======== HEADER AND NAVIGATION ======== -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button><!-- /navbar-toggle -->
+          <a class="navbar-brand" href="index.html" style="padding: 0;">
+            <img src="img/logo.png" width="160" alt="AlexTrujillo Logo" /></a>
+        </div><!-- /navbar-header -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Resume</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul><!-- /nav navbar-nav -->
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+    <!-- ======== /HEADER AND NAVIGATION ======== -->
 
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+    <!-- ======== INTRO ======== -->
+    <div id="home" class="intro">
+      <div class="intro-msg">
+        <h1>Hello. My name is Alex Trujillo and I'm Developer.</h1>
+        <a style="margin: 8px"  href="#portfolio" class="btn btn-light">My Projects</a>
+        <a style="margin: 8px" href="https://github.com/alextrujillo4" class="btn btn-dark">My Github</a>
+
+      </div><!-- /intro-msg -->
+    </div><!-- /intro -->
+    <!-- ======== /INTRO ======== -->
+
+    <!-- ======== ABOUT ME ======== -->
+    <div id="about" class="about pd-t-b-144">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 wow fadeIn" data-wow-duration="1.2s">
+            <div class="section-title text-center">
+              <h2>About Me</h2>
+              <p>I consider myself a hardworking, and creative person, a tech lover, always open for new learning challenges.</p>
+            </div><!-- /section-title -->
+          </div><!-- /col-md-12 -->
+          <div class="col-md-3 col-sm-6 col-xs-12 about-img no-padding wow fadeIn" data-wow-duration="1.2s">
+            <img class="img-responsive" src="img/about_me.png" alt="My picture">
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 col-sm-6 col-xs-12 about-progress no-padding wow fadeIn" data-wow-duration="1.2s">
+            <div class="skills">
+              <div class="progress-lt">
+                <h4>University</h4>
+                  <h3 class="colored">Tecnológico de Monterrey</h3>
+              </div><!-- /progress-lt -->
+              <div class="progress-lt">
+                <h4>Career</h4>
+                <h3 class="colored">Computer Science</h3>
+              </div><!-- /progress-lt -->
+              <div class="progress-lt">
+                <h4>City</h4>
+                <h3 class="colored">Monterrey, NL, MX</h3>
+              </div><!-- /progress-lt -->
+              <div class="progress-lt">
+                <h4>Phone Number</h4>
+                <h3 class="colored">(+52) 81 3281 8256</h3>
+              </div><!-- /progress-lt -->
+            </div><!-- /skills -->
+          </div><!-- /col-md-3 -->
+          <div class="col-md-5 col-sm-12 col-xs-12 about-text wow fadeIn" data-wow-duration="1.2s">
+            <h3>I am creative developer.</h3>
+            <p>I’m a team player that loves to share knowledge and contributed to reach the set goals. I'm kind of enthusiastic person , so i like to talk and contribute about new ideas. I love what i do!!!</p>
+            <a target="_blank" href="./CV_AlexTrujillo_2020.pdf" class="btn btn-light">Download Resume</a>
+          </div><!-- /col-md-5 -->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </div><!-- /about -->
+    <!-- ======== /ABOUT ME ======== -->
+
+    <!-- ======== PORTFOLIO ======== -->
+    <div id="portfolio" class="portfolio text-center pd-t-b-144">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 wow fadeIn" data-wow-duration="1.2s">
+            <div class="section-title text-center">
+              <h2>Best Projects</h2>
+              <p>These are some projects i've been involved. I've worked with <b>Android</b>, <b>Vue.js</b> and  <b>Dialogflow</b></p>
+              <p>*** Click the Item to go to the description of the project ***</b></p>
+
+            </div><!-- /section-title -->
+          </div><!-- /col-md-12 -->
+        </div><!-- /row -->
+        <div class="row portfolio-work">
+          <div class="grid-sizer"></div>
+          <div class="portfolio-grid big web">
+            <div class="grid-item">
+              <img src="img/main/epesos.png" class="img-responsive" alt="Portfolio item" />
+              <div class="portfolio-overlay">
+                <div class="portfolio-overlay-text">
+                  <a href="projects/portfolio-epesos.html"><h3>Paddle Trainer Bot</h3></a>
+                </div><!-- /portfolio-overlay-text -->
+              </div><!-- /portfolio-overlay -->
+            </div><!-- /grid-item -->
+          </div><!-- /portfolio-grid -->
+          <div class="portfolio-grid web branding">
+            <div class="grid-item">
+              <img src="img/main/entrenador.png" class="img-responsive" alt="Portfolio item"/>
+              <div class="portfolio-overlay">
+                <div class="portfolio-overlay-text">
+                  <a href="projects/portfolio-entrenador.html"><h3>Entrenador de Pádel</h3></a>
+                </div><!-- /portfolio-overlay-text -->
+              </div><!-- /portfolio-overlay -->
+            </div><!-- /grid-item -->
+          </div><!-- /portfolio-grid -->
+
+
+          <div class="portfolio-grid web photography">
+            <div class="grid-item">
+              <img src="img/main/decalinks.png" class="img-responsive" alt="Portfolio item" />
+              <div class="portfolio-overlay">
+                <div class="portfolio-overlay-text">
+                  <a href="projects/portfolio-decalinks.html"><h3>Decalinks</h3></a>
+                </div><!-- /portfolio-overlay-text -->
+              </div><!-- /portfolio-overlay -->
+            </div><!-- /grid-item -->
+          </div><!-- /portfolio-grid-->
+        </div><!-- /row -->
+      </div><!-- /container -->
+      <a style="margin: 8px"  href="projects/portfolio.html" class="btn btn-light">Other Projects</a>
+
+    </div><!-- /portfolio -->
+    <!-- ======== /POTFOLIO ======== -->
+
+    <!-- ======== SERVICES ======== -->
+    <div id="services" class="services pd-t-b-144 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <div class="section-title wow fadeIn" data-wow-duration="1.2s">
+              <h2>Services</h2>
+              <p>I work as Freelancer, these are the services i provide. </p>
+            </div><!-- /section-title -->
+          </div><!-- /col-md-12 -->
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.2s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-desktop"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>Web Apps</h3>
+                <p>
+                  I make <b>native web</b> development with js, css and html up to projects with The <b>Vue.js Framework</b></p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-mobile"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>Android Apps</h3>
+                <p>I love working with the Android Native Development,from making new and amazing apps to giving maintenance and consulting</p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-settings"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>Bot development</h3>
+                <p>Make Messenger, Assistant and Web <b>Bots</b> in order to help business to automate business information/conversations.</p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+          <div class="col-md-12 services-spacing"></div>
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-camera"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>Photography</h3>
+                <p>As a Colaboration with <a style="color: white" href="http://botellacreativa.com/"><b>La botella creativa</b></a>, we create your branding, style and business identity</p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="1s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-stats-up"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>Smart Marketing</h3>
+                <p>As a Colaboration with <a style="color: white" href="https://zuperzum.com/"><b>Zuperzum</b></a>,
+                  We automate communication with your clients on any platform</p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="1.2s">
+            <div class="services-item">
+              <div class="services-icon">
+                <span class="ti-user"></span>
+              </div><!-- /services-icon -->
+              <div class="services-info">
+                <h3>UI/UX</h3>
+                <p>As a Colaboration with <a style="color: white" href=""><b>MR</b></a>, we create your UI/UX Software Design</p>
+              </div><!-- /services-info -->
+            </div><!-- /services-item -->
+          </div><!-- /col-md-4 -->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </div><!-- /services -->
+    <!-- ======== /SERVICES ======== -->
+
+    <!-- ======== CLIENTS ======== -->
+    <div class="clients pd-t-b-72"></div><!-- /clients -->
+    <!-- ======== /CLIENTS ======== -->
+
+    <!-- ======== GO UP BUTTON ======== -->
+    <a href="#home" class="button-up">
+      <span class="ti-arrow-up"></span>
+    </a><!-- /button-up -->
+    <!-- ======== /GO UP BUTTON ======== -->
+
+    <!-- ======== /FOOTER ======== -->
+    <footer class="pd-t-b-96 text-center" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 footer-contact wow fadeIn" data-wow-duration="1.2s">
+            <span class="ti-location-pin"></span>
+            <p>Monterrey, Nuevo León</p>
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 footer-contact wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.2s">
+            <span class="ti-email"></span>
+            <a href="mailto:alexandro4v@gmail.com"><p >alexandro4v@gmail.com</p></a>
+          </div><!-- /col-md-4 -->
+          <div class="col-md-4 footer-contact wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
+            <span class="ti-mobile"></span>
+            <a href="https://api.whatsapp.com/send?phone=528132818256&text=Hola%20Alex!"><p>(+52) 81 3281 8256</p></a>
+          </div><!-- /col-md-4 -->
+          <div class="footer-line">
+          </div><!-- /footer-line -->
+          <div class="col-md-12">
+            <ul class="social-list">
+              <li class="wow fadeIn" data-wow-duration="1.2s"><a href="https://www.instagram.com/alextrujillo4/"><span class="ti-instagram"></span></a></li>
+              <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.2s"><a href="https://twitter.com/alextrujillo04"><span class="ti-twitter-alt"></span></a></li>
+              <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s"><a href="https://www.linkedin.com/in/alextrujillo4/"><span class="ti-linkedin"></span></a></li>
+              <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s"><a href="https://github.com/alextrujillo4"><span class="ti-github"></span></a></li>
+            </ul><!-- /social-list -->
+          </div><!-- /col-md-12 -->
+          <div class="col-md-12 wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
+            <p>alextrujillo4</p>
+          </div><!-- /col-md-12-->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </footer><!-- /pd-96 -->
+    <!-- ======== /FOOTER ======== -->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- owl-carousel plugin -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- wow animation plugin -->
+    <script src="js/wow.min.js"></script>
+    <!-- validation plugin -->
+    <script src="js/validator.min.js"></script>
+    <!-- contact form.js -->
+    <script src="js/contact.js"></script>
+    <!-- isotope plugin -->
+    <script src="js/isotope.pkgd.min.js"></script>
+    <!-- main script, settings for all scripts -->
+    <script src="js/scripts.js"></script>
   </body>
 </html>
