--- a/public/projects/portfolio-decalinks.html
+++ b/public/projects/portfolio-decalinks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Personal, Portfolio">
-    <meta name="description" content="Alex Trujillo - Personal Portfolio Template">
+    <meta name="description" content="Alex Trujillo">
     <meta name="author" content="radekthemes">
     <title>Alex Trujillo - Personal Portfolio</title>
     <!-- Bootstrap -->
